# record-dot-preprocessor

./: .ghci  .ghcid  .gitignore  .travis.yml  CHANGES.txt  Demo.hs  LICENSE  README.md  record-dot-preprocessor.cabal  travis.hs
.github/workflows/: ci.yml
examples/: Both.hs  Both2.hs  Complex.hs  Example.hs  Header_in.hs  HkdPlugin.hs  Preprocessor.hs  Readme.hs
plugin/: .ghcid  Compat.hs  Example.hs  GHC_8_6.hs  GHC_HEAD.hs  README.md  RecordDotPlugin.hs  RecordDotPreprocessor.hs
plugin/RecordDotPreprocessor/: Lib.hs
preprocessor/: Edit.hs  Lexer.hs  Main.hs  Paren.hs  Preprocessor.hs  Unlexer.hs
proposal/: 0000-record-dot-syntax.md  alternatives.md
src/: Edit.hs  Lexer.hs  Main.hs  Paren.hs  Unlexer.hs
test/: PluginExample.hs  PluginHkdExample.hs  Test.hs
