cabal-version:      >= 1.18
build-type:         Simple
name:               record-dot-preprocessor
version:            0.1.4
license:            BSD3
x-license:          BSD-3-Clause OR Apache-2.0
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2018
synopsis:           Preprocessor to allow record.field syntax
description:
    In almost every programming language @a.b@ will get the @b@ field from the @a@ data type, and many different data types can have a @b@ field.
    The reason this feature is ubiquitous is because it's /useful/.
    The @record-dot-preprocessor@ brings this feature to Haskell - see the README for full details.
homepage:           https://github.com/ndmitchell/record-dot-preprocessor#readme
bug-reports:        https://github.com/ndmitchell/record-dot-preprocessor/issues
extra-doc-files:
    README.md
    CHANGES.txt
tested-with:        GHC==8.4.3, GHC==8.2.2

source-repository head
    type:     git
    location: https://github.com/ndmitchell/record-dot-preprocessor.git

executable record-dot-preprocessor
    default-language:   Haskell2010
    hs-source-dirs:     src
    main-is:            Main.hs
    build-depends:
        base >= 4.6 && < 5,
        filepath,
        extra
    other-modules:
        Edit
        Lexer
        Paren
        Unlexer
