cabal-version:      >= 1.18
build-type:         Simple
name:               record-dot-preprocessor
version:            0.2.2
license:            BSD3
x-license:          BSD-3-Clause OR Apache-2.0
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2018-2019
synopsis:           Preprocessor to allow record.field syntax
description:
    In almost every programming language @a.b@ will get the @b@ field from the @a@ data type, and many different data types can have a @b@ field.
    The reason this feature is ubiquitous is because it's /useful/.
    The @record-dot-preprocessor@ brings this feature to Haskell - see the README for full details.
homepage:           https://github.com/ndmitchell/record-dot-preprocessor#readme
bug-reports:        https://github.com/ndmitchell/record-dot-preprocessor/issues
extra-doc-files:
    README.md
    CHANGES.txt
tested-with:        GHC==8.8.1, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2
extra-source-files:
    examples/Both.hs
    examples/Preprocessor.hs
    examples/Readme.hs

source-repository head
    type:     git
    location: https://github.com/ndmitchell/record-dot-preprocessor.git

library
    default-language:   Haskell2010
    hs-source-dirs:     plugin
    build-depends:
        base >= 4.8 && < 5,
        uniplate,
        ghc,
        extra
    if impl(ghc < 8.6)
        buildable: False
    exposed-modules:
        RecordDotPreprocessor
    other-modules:
        Compat

executable record-dot-preprocessor
    default-language:   Haskell2010
    hs-source-dirs:     preprocessor
    main-is:            Preprocessor.hs
    ghc-options:        -main-is Preprocessor
    build-depends:
        base >= 4.8 && < 5,
        extra
    other-modules:
        Edit
        Lexer
        Paren

test-suite record-dot-preprocessor-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs: preprocessor, test
    ghc-options: -main-is Test.main

    build-depends:
        base == 4.*,
        extra,
        record-hasfield,
        filepath
    if impl(ghc >= 8.6)
        build-depends:
            record-dot-preprocessor
    other-modules:
        PluginExample
        Preprocessor
        Edit
        Lexer
        Paren
